--- a/index.html
+++ b/index.html
@@ -1,18 +1,80 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xio y Agus</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
     <header id="header-inicio">
-        <h1>¡Nos casamos!</h1>
-        <h2>Xio & Agus</h2>
+
+        <p>¡Nos casamos!</p>
+        <h1>Xio & Agus</h1>
+
     </header>
     <main>
+        <section id="s-info">
+            <div>
+                <p>Sábado 27 de enero del 2024.</p>
+                <button>Save the date</button>
+            </div>
 
+            <article>
+                <h2>Ceremonia religiosa</h2>
+                <p>Nuestra Señora del Perpetuo Socorro</p>
+                <p><span class="material-symbols-outlined">
+                    schedule
+                    </span>7 PM (puntual)</p>
+                <p><span class="material-symbols-outlined">
+                    location_on
+                    </span>Tapes 966</p>
+                <button>Cómo llegar</button>
+            </article>
+
+            <article>
+                <h2>Celebración</h2>
+                <p>Chacra San José</p>
+                <p><span class="material-symbols-outlined">
+                    location_on
+                    </span>Cno. de la Redención 7095</p>
+                <button>Cómo llegar</button>
+            </article>
+
+            <div>
+                <h3>Confirmar asistencia:</h3>
+                <p>Esperamos que seas parte de nuestro casamiento.</p>
+                <p>¡Confirma tu asistencia antes del 31 de diciembre!</p>
+                <button>Confirmar</button>
+            </div>
+        </section>
+
+        <section>
+            <h2>Empecemos a vivir juntos este gran día.</h2>
+            <div>
+                <article>
+                    <p>Mirá los TikTok preferidos de los novios y aprenderlos para darlo todo la pista.</p>
+                    <a href="">Ver más</a>
+                </article>
+                <article>
+                    <p>¿Qué canciones no pueden faltar?</p>
+                    <p>Ayudanos sugiriendo canciones en nuestra lista de Spotify.</p>
+                    <a href="">Agregar canción</a>
+                </article>
+            </div>
+            <div>
+                <p>¡Preparate con nosotros para el casamiento!</p>
+                <p>Seguinos en Instagram y comencemos a vivirlo juntos.</p>
+                <div>
+                    <img src="img/icons_ig.svg" alt="icono-instagram">
+                    <p>@boda_xioyagus</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
